dataset1235/2025-2/2947369575/users/2435515800/executions/3873599344_3530285078.log
== RUN (2025-08-20 23:00:47)
-- CODE: 
string = "AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.
             ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:01:03)
-- CODE: 
string = "AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:59:40)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                                                                                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                                                                                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:01:00)
-- CODE: 
string = "AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:43)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                                                                                        ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                                                                                        ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
